style.css
@import url("https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Lexend Deca", sans-serif;
}

html {
  scroll-behavior: smooth;
  font-size: 16px;
}

body {
  line-height: 1.5;
}

a {
  text-decoration: none;
}

ul {
  list-style-type: none;
}

img {
  display: flex;
  width: 100%;
}

:root {
  --purple: rgb(100 21 255);
  --dark-navy: rgb(36, 62, 99);
  --light-gray: rgb(124, 139, 161);

  --gradient-teal: linear-gradient(
    to right,
    rgb(56, 178, 172),
    rgb(129, 230, 217)
  );

  --gradient-blue: linear-gradient(
    135deg,
    rgb(76, 81, 191),
    rgb(102, 126, 234)
  );

  --gradient-red: linear-gradient(
    to right,
    rgb(245, 101, 101),
    rgb(254, 178, 178)
  );
}

/* 

COMPONENTS

*/

.action {
  border: none;
  background: none;
  font-size: 1.6rem;
  color: var(--dark-navy);
  cursor: pointer;
}

.button {
  --color: white;
  --background-color: var(--purple);

  display: inline-flex;
  align-items: center;
  justify-content: center;

  /* Main Style */
  padding: 16px 32px;
  border-radius: 48px;

  font-size: 1rem;
  font-weight: 600;

  color: var(--color);
  background-color: var(--background-color);

  transition: all 350ms ease;

  &:hover {
    background-color: rgb(60 13 153 / 1);
  }

  /* Do Not Delete! - Resets "User Agent Stylesheet" */
  border: none;
  text-decoration: none;
  appearance: none;
}

.button--sm {
  padding: 12px 32px;
  font-size: inherit;
  font-weight: inherit;
}

.button--xs {
  padding: 10px 32px;
  font-size: inherit;
}

.button--orange {
  --background-color: rgb(245, 101, 101);

  &:hover {
    background-color: rgb(229, 62, 62);
  }
}

.button--outlined {
  --background-color: transparent;
  border: 1px solid currentColor;

  &:hover {
    color: var(--purple);
    background-color: white;
  }
}

/* 

  UTILITIES

*/

.u-accent {
  color: var(--purple);
}

.is-visually-hidden {
  display: none;
}

.is-disabled {
  cursor: not-allowed;
}

/* 

  CONTAINERS & STRUCTURE

*/

.container {
  width: min(100%, 1280px);
  margin: 0 auto;
}

.landing {
  min-height: 100vh;
  min-height: 100svh;
  display: flex;
  flex-direction: column;
}

/* 

  HEADER

*/

.header {
  padding: 32px;
  display: flex;
  align-items: center;
}

.header__inner {
  display: flex;
  justify-content: space-between;
}

.header__brand {
  display: flex;
  align-items: center;
  gap: 12px;
}

.header__brand-logo {
  width: 42px;
}

.header__brand-name {
  font-size: 1.5rem;
  font-weight: 800;
  color: var(--dark-navy);
}

.header__nav {
  display: flex;
  align-items: center;
  gap: 64px;
}

.header__list {
  display: flex;
  align-items: center;
  gap: 24px;
}

.header__list--primary {
  gap: 48px;
}

.header__item {
  display: flex;
  align-items: center;
  font-size: 0.875rem;
  font-weight: 600;
}

.header__link {
  letter-spacing: 0.03125rem;
  color: var(--dark-navy);
}

.header__menu-toggle {
  display: none;
}

/* 

  BURGER MENU

*/

.menu {
  transform: translateX(120%);
  display: flex;
  position: absolute;
  inset: 20px 20px auto 20px;
  z-index: 100;

  border: rgb(226, 232, 240) solid 1px;
  background-color: #fff;

  transition: transform 350ms ease-in-out;
}

.menu__inner {
  flex: 1;
  padding: 40px;
}

.menu__nav {
  display: flex;
  flex-direction: column;
  gap: 1.4rem;
}

.menu__list {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.4rem;
  font-size: 1.125rem;
  font-weight: 500;
}

.menu__list--primary {
  display: none;
}

.menu__link {
  letter-spacing: 0.025em;
  color: rgb(26, 32, 44);
}

.menu__close {
  position: absolute;
  inset: 18px 20px auto auto;
}

/* 

  SECTIONS

*/

.section:not(.hero) {
  min-height: max(600px 100vh);
  min-height: max(600px, 100svh);
}

.section {
  min-height: 600px;
  padding: 40px 32px;

  display: flex;
  align-items: center;
  justify-content: center;
}

.section__inner {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 32px;
}

.section__split {
  display: flex;
  align-items: center;
  gap: 16px;
}

.section__split--reverse {
  flex-direction: row-reverse;
}

.section__content {
  flex: 1;

  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 32px;
}

.section__content--primary {
  flex: 0 0 40%;
  gap: 80px;
}

.section__header {
  display: flex;
  flex-direction: column;
  align-items: inherit;
  gap: 16px;
}

.section__header--hero {
  gap: 32px;
}

.section__title {
  font-size: 1rem;
  letter-spacing: 0.2rem;
  color: var(--purple);
}

.section__subtitle {
  font-size: clamp(2.3rem, 5vw, 3rem);
  font-weight: 900;
  line-height: 1.25;
  color: var(--dark-navy);
}

.section__p {
  max-width: 576px;
  line-height: 1.625;
  font-weight: 400;
  font-size: clamp(0.8rem, 2vw, 1.1rem);
  color: var(--light-gray);
}

/* 

  SECTIONS - HERO

*/

.hero {
  flex: 1;
}

.hero__title {
  line-height: 1.2;
  font-size: clamp(1.8rem, 3.8vw, 3rem);
  font-weight: 600;
  color: rgb(26, 32, 44);
}

.hero__p {
  font-size: clamp(1rem, 1.8vw, 1.125rem);
  font-weight: 400;
  color: var(--dark-navy);
}

.hero__form {
  width: 100%;
  max-width: 448px;
}

.hero__field {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 16px;
}

.hero__input {
  width: 100%;
  height: 68px;
  padding-left: 32px;
  padding-right: 170px;
  border: rgb(226, 232, 240) solid 2px;
  border-radius: 96px;
  font-size: 1rem;

  transition: all 300ms ease;

  &::placeholder {
    font-size: 1rem;
    color: rgb(226, 232, 240);
  }

  &:hover {
    border-color: rgb(169, 173, 179);
  }

  &:focus {
    border-color: var(--purple);
    outline: none;
  }
}

.hero__submit {
  position: absolute;
  right: 0;
  margin-right: 8px;
}

.trusted-customers {
  display: flex;
  flex-direction: column;
  align-items: inherit;
  gap: 16px;
}
/* ... */

